--- a/index.html
+++ b/index.html
@@ -2,3 +2,11 @@
 layout: home
 author_profile: true
 ---
+
+<script src="https://utteranc.es/client.js"
+        repo="IMHOJEONG/ChungNamMoGakCo"
+        issue-term="pathname"
+        theme="dark-blue"
+        crossorigin="anonymous"
+        async>
+</script>
