--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: home
 author_profile: true
 ---
 
-<!-- <script src="https://utteranc.es/client.js"
+<script src="https://utteranc.es/client.js"
         repo="IMHOJEONG/ChungNamMoGakCo"
         issue-term="pathname"
         theme="dark-blue"
         crossorigin="anonymous"
         async>
-</script> -->
+</script>
